--- a/src/components/DomainePage/styles.scss
+++ b/src/components/DomainePage/styles.scss
@@ -22,6 +22,7 @@
 
   &__section-text {
     
+    z-index: 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -53,7 +54,6 @@
 
   &__section-photos {
     
-    z-index: 5;
     width: calc(100vw / 3 ) * 1;
     height: 100vh;
     margin: 0;
@@ -123,8 +123,7 @@
 
   &__container {
 
-    z-index: 1000;
-    position: fixed;
+    position: absolute;
     left: 0;
     top: 0;
     width: 100%;
